; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/rtc/extr_rtc-bfin.c_bfin_rtc_int_set_alarm.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/rtc/extr_rtc-bfin.c_bfin_rtc_int_set_alarm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bfin_rtc = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@RTC_ISTAT_ALARM = common dso_local global i32 0, align 4
@RTC_ISTAT_ALARM_DAY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bfin_rtc*)* @bfin_rtc_int_set_alarm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bfin_rtc_int_set_alarm(%struct.bfin_rtc* %0) #0 {
  %2 = alloca %struct.bfin_rtc*, align 8
  store %struct.bfin_rtc* %0, %struct.bfin_rtc** %2, align 8
  %3 = load %struct.bfin_rtc*, %struct.bfin_rtc** %2, align 8
  %4 = getelementptr inbounds %struct.bfin_rtc, %struct.bfin_rtc* %3, i32 0, i32 0
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = icmp eq i32 %6, -1
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = load i32, i32* @RTC_ISTAT_ALARM, align 4
  br label %12

10:                                               ; preds = %1
  %11 = load i32, i32* @RTC_ISTAT_ALARM_DAY, align 4
  br label %12

12:                                               ; preds = %10, %8
  %13 = phi i32 [ %9, %8 ], [ %11, %10 ]
  %14 = call i32 @bfin_rtc_int_set(i32 %13)
  ret void
}

declare dso_local i32 @bfin_rtc_int_set(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
